# data_curation

./: .gitignore  README.md  pyproject.toml  tox.ini
analysis/: Data Ingestion - NOAA Weather Data.ipynb  Data Ingestion - OpenDataPhilly Complete Streets.ipynb  Data Ingestion - OpenDataPhilly Land Use.ipynb  Data Ingestion - US Census Block Data.ipynb  Data Ingestion - US Census Block Shapes.ipynb  Data Ingestion - USGS Groundwater Data.ipynb  Proof Of Concept - Tooling Learnings.ipynb  Proof Of Concept - Tooling Learnings.py
analysis/Conform/: Conform - Census Data.ipynb  Conform - Groundwater Data.ipynb
analysis/EDA/: Exploration - Aquifers.ipynb
analysis/Ingestion/: Data Ingestion - NOAA Weather Data.ipynb  Data Ingestion - OpenDataPhilly Complete Streets.ipynb  Data Ingestion - OpenDataPhilly Land Use.ipynb  Data Ingestion - US Census Block Shapes.ipynb  Data Ingestion - US Census Zip Data.ipynb  Data Ingestion - US Census Zip Shapes.ipynb  Data Ingestion - USGS Groundwater Data.ipynb
metastore/NOAAWeatherData/: ro-crate-metadata.json
metastore/OpenDataPhillyLandUse/: ro-crate-metadata.json
metastore/OpenDataPhillyStreets/: ro-crate-metadata.json
metastore/US2020Census/: ro-crate-metadata.json
metastore/US2020CensusBlockGeometryPA/: ro-crate-metadata.json
metastore/US2020CensusBlockPhiladelphia/: ro-crate-metadata.json
metastore/US2020CensusZCTA5Geometry/: ro-crate-metadata.json
metastore/US2020CensusZCTA5PA/: ro-crate-metadata.json
metastore/USGSGroundwater/: ro-crate-metadata.json
metastore/USGSGroundwaterConformed/: ro-crate-metadata.json
(+2 files in other folders)
